# Yugo-LLaVA

./: .gitignore  README.md  pyproject.toml  setup_pretrain.sh
llava/model/language_model/: llava_mistral.py  llava_yugogpt.py
llava/train/: train.py
scripts/: pretrain.sh
